--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sah_motors_2",
   "version": "1.0.0",
-  "description": "",
+  "description": "full stack app for vehicles",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,8 +17,12 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "liquid-express-views": "^1.0.8",
+    "liquidjs": "^10.4.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.2.4",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
